# Trading-graph

./: $null  .env.china  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  BUGFIXES.md  BUG_ANALYSIS_REPORT.md  BUG_REPORT.md  CONTRIBUTING.md  MODERNIZATION.md  README.md  config.py  core_v2.py  debug_learn.py  filelist.txt  main.py  mypy_output.txt  mypy_output2.txt  package-lock.json  package.json  pyproject.toml  pytest_output.txt  requirements-ai.txt  requirements-all.txt  requirements-desktop.txt  requirements-dev.txt  requirements-live.txt  requirements-web.txt  requirements.txt  test_akshare_1m.py  test_chart_data.py  test_chart_pipeline.py  test_china_network.py  test_fetch.py
.ci/: exception-policy-baseline.txt  exception-policy-budget.json  module-size-baseline.txt  module-size-budget.json  mypy-baseline.txt  mypy-strict-baseline.txt
.claude/: settings.local.json
.pip/: pip.ini
ai/: README.md  __init__.py  audit_logger.py  cli.py  command_parser.py  context_manager.py  controller.py  llm_limitations_fix.py  local_llm.py  rag_engine.py  safety_validator.py  security.py  self_chat_trainer.py
analysis/: __init__.py  advanced_backtest.py  advanced_charts.py  backtest.py  drawing_tools.py  feature_score_report_2026-02-26.json  profit_quality_benchmark.json  realistic_backtest.py  replay.py  screener.py  sentiment.py  strategy_engine.py  strategy_marketplace.py  technical.py  technical_indicators.py  technical_indicators_extended.py
config/: __init__.py  runtime_env.py  security_policy.json  settings.py  settings_utils.py
core/: __init__.py  async_events.py  china_network.py  constants.py  events.py  exceptions.py  instruments.py  network.py  symbols.py  types.py
data/: __init__.py  advanced_data_quality.py  alert_history.json  bar_aggregator.py  cache.py  cache_manager.py  data_quality.py  database.py  discovery.py  fallback_stocks.py  features.py  feeds.py  fetcher.py  fetcher_clean_ops.py  fetcher_config.py  fetcher_enhanced.py  fetcher_frame_ops.py  fetcher_history_flow_ops.py  fetcher_history_ops.py  fetcher_instance_ops.py  fetcher_quality_ops.py  fetcher_quote_ops.py  fetcher_realtime_ops.py  fetcher_reconcile_ops.py  fetcher_refresh_ops.py  fetcher_registry.py  fetcher_source_ops.py  fetcher_sources.py  fetcher_tencent_source.py  fetcher_unified.py  fundamentals.py  learner_state.json  llm_chat.py  llm_sentiment.py  market_data.db  market_data.db-shm  market_data.db-wal  multi_source_federation.py  news.py  news_aggregator.py  (+27 more)
data_storage/: app_state.json  learner_state.json  market_data.db  market_data.db-shm  market_data.db-wal
docs/: ENHANCED_AI_OPS.md  ENHANCED_TRAINING.md  OPERATIONS_PLAYBOOK.md  PRODUCTION_ENHANCEMENTS.md  REAL_TIME_NEWS_IMPLEMENTATION.md  core_feature_scorecard.md
logs/: app_2026-02-05.log.2026-02-05
models/: __init__.py  advanced_ensemble.py  advanced_features.py  advanced_layers.py  advanced_networks.py  auto_learn_dialog.py  auto_learner.py  auto_learner_components.py  auto_learner_cycle_ops.py  auto_learner_flow_ops.py  auto_learner_lifecycle_ops.py  auto_learner_precision_ops.py  confidence_calibration.py  enhanced_data_quality.py  enhanced_evaluation.py  ensemble.py  explainability.py  layers.py  model_registry.py  modern_models.py  networks.py  news_embeddings.py  news_trainer.py  prediction_quality.py  predictor.py  predictor_forecast_ops.py  predictor_runtime_ops.py  predictor_types.py  predictor_v2.py  pretrained_integration.py  professional_trainer.py  regime.py  regime_detection.py  trainer.py  trainer_data_ops.py  trainer_enhanced.py  trainer_eval_ops.py  trainer_pipeline_ops.py  training_checkpoint.py  training_enhanced.py  (+3 more)
models_saved/: best_metrics_1m_30.json  model_manifest.json  model_manifest_ensemble_1d_5.json  model_manifest_ensemble_1m_30.json  scaler.pkl  scaler_1d_1.pkl  scaler_1d_1.pkl.backup  scaler_1d_5.pkl  scaler_1m_30.pkl.best
saved_data/: 000333.pkl  000651.pkl  000858.pkl  002230.pkl  002475.pkl  002594.pkl  300015.pkl  300059.pkl  300750.pkl  300760.pkl  600030.pkl  600036.pkl  600276.pkl  600519.pkl  600887.pkl  600900.pkl  601166.pkl  601318.pkl  601398.pkl  603288.pkl  learning_history.json
saved_models/: scaler.pkl
scripts/: deployment_snapshot.py  exception_policy_gate.py  feature_score_gate.py  fix_bare_except.py  gate_common.py  generate_release_manifest.py  ha_dr_drill.py  manual_cache_delete.py  module_size_gate.py  observability_probe.py  profit_quality_benchmark.py  regulatory_readiness.py  release_preflight.py  setup_china.py  soak_broker_e2e.py  todo_resolver.py  typecheck_common.py  typecheck_gate.py  typecheck_strict_gate.py
secrets/: trading_graph.key
strategies/: __init__.py  bollinger_breakout.py  earnings_momentum.py  enabled.json  gap_and_go.py  genetic_optimizer.py  golden_cross.py  macd_divergence.py  marketplace.json  mean_reversion.py  momentum_breakout.py  performance.json  ratings.json  rsi_oversold.py  strategy_collection.py  strategy_library.py  support_resistance.py  trend_following.py  volume_profile.py  vwap_reversion.py
tests/: conftest.py  test_access_control.py  test_alerts.py  test_app_analysis_chart_fallback.py  test_app_analysis_no_model_chart.py  test_app_analysis_stale_results.py  test_app_model_chart_ops_prepared_prediction_cleaning.py  test_app_screener_profile_ui.py  test_app_universe_ops.py  test_artifact_checksum_io.py  test_artifact_loading_security.py  test_audit_integrity.py  test_auto_learn_workers.py  test_auto_learner_discovery_pool.py  test_auto_learner_drift_alarm.py  test_auto_learner_parallel_fetcher.py  test_auto_learner_session_priority.py  test_auto_learner_trainer_regressions.py  test_backtest_metrics.py  test_backtest_optimize.py  test_bar_aggregator_interval.py  test_broker_status_parsing.py  test_bug_fixes.py  test_cache_bugs.py  test_cache_delete_guard.py  test_chaos_resilience.py  test_chart_history_selected_date_fallback.py  test_chart_prediction_symbol_binding.py  test_china_data_paths.py  test_china_diagnostics.py  test_config_bool_parsing.py  test_constants_time_guards.py  test_data.py  test_data_leakage.py  (+82 more)
(+142 files in other folders)
