[project]
name = "trading-graph"
version = "0.1.0"
description = "AI-assisted stock trading workstation with backtest, OMS, risk, and UI"
requires-python = ">=3.10"
dependencies = [
  # FIX #33: Pin numpy to <2.0.0 to avoid breaking changes
  "numpy>=1.24.0,<2.0.0",
  "pandas>=2.0.0,<3.0.0",
  "scikit-learn>=1.3.0,<2.0.0",
  "scipy>=1.11.0,<2.0.0",
  "ta>=0.10.0,<1.0.0",
  "requests>=2.31.0,<3.0.0",
  "psutil>=6.0.0,<7.0.0",
  # FIX #27: Add upper version bound for cryptography
  "cryptography>=42.0.0,<45.0.0",
  "tqdm>=4.65.0,<5.0.0",
]

[tool.setuptools.packages.find]
include = [
  "analysis*",
  "config*",
  "core*",
  "data*",
  "models*",
  "scripts*",
  "strategies*",
  "tests*",
  "trading*",
  "ui*",
  "utils*",
]
exclude = [
  "venv*",
  "cache*",
  "audit*",
  "data_storage*",
  "models_saved*",
  "backups*",
  "logs*",
]

[project.optional-dependencies]
ml = [
  "torch>=2.0.0,<3.0.0",
]
china = [
  "akshare>=1.10.0",
]
vpn = [
  "yfinance>=0.2.40",
]
nlp = [
  "beautifulsoup4>=4.12.0,<5.0.0",
]
gui = [
  "PyQt6>=6.5.0,<7.0.0",
  "pyqtgraph>=0.13.0,<1.0.0",
]
# FIX #26: Removed duplicate cryptography (already in core dependencies)
security = []
live = [
  "easytrader>=0.23.0",
]
explainability = [
  "shap>=0.44.0",
  "lime>=0.2.0",
]
backup = [
  "boto3>=1.34.0",
  "azure-storage-blob>=3.19.0",
  "google-cloud-storage>=2.13.0",
]
# FIX #25: Changed from two-factor-auth (hyphens can cause pip normalization issues)
two_factor_auth = [
  "qrcode[pil]>=7.4.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-requests>=2.32.0.20240712",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=analysis --cov=config --cov=core --cov=data --cov=models --cov=trading --cov=ui --cov=utils --cov-report=term-missing --cov-fail-under=40"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  "venv",
  "cache",
  "audit",
  "data_storage",
  "models_saved",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["analysis", "config", "core", "data", "models", "trading", "ui", "utils"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
strict_optional = true
warn_no_return = true
warn_unreachable = true
allow_redefinition = true
show_error_codes = true
pretty = true
# FIX #16: Reduced silenced error categories to improve static analysis
# Only silence categories that are truly unavoidable (external libs, legacy code)
disable_error_code = [
  "import",
  "misc",
  "no-untyped-def",
  "no-untyped-call",
  "var-annotated",
]
exclude = "(^|.*[\\\\/])(venv|cache|audit|data_storage|models_saved|scripts)([\\\\/]|$)"

[[tool.mypy.overrides]]
module = [
  "PyQt6.*",
  "pyqtgraph.*",
  "akshare.*",
  "yfinance.*",
  "easytrader.*",
  "ta.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["analysis", "config", "core", "data", "models", "trading", "ui", "utils"]
omit = [
  "tests/*",
  "venv/*",
  "cache/*",
  "audit/*",
  "data_storage/*",
  "models_saved/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "raise NotImplementedError",
]
