[project]
name = "trading-graph"
version = "2.0.0"
description = "AI-assisted stock analysis workstation with backtest and UI - Modernized Edition"
requires-python = ">=3.11"
dependencies = [
  # Core numerical stack - updated for 2025
  "numpy>=1.26.0,<3.0.0",
  "pandas>=2.1.0,<3.0.0",
  "scikit-learn>=1.3.0,<2.0.0",
  "scipy>=1.11.0,<2.0.0",
  "ta>=0.11.0,<1.0.0",
  # Async I/O stack - NEW
  "aiohttp>=3.9.0,<4.0.0",
  "httpx>=0.25.0,<1.0.0",
  "anyio>=4.0.0,<5.0.0",
  "asyncio>=3.4.3,<4.0.0",
  # Database layer - modernized
  "aiosqlite>=0.19.0,<1.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  # Caching - Redis support
  "redis>=5.0.0,<6.0.0",
  # ML stack - updated
  "torch>=2.1.0,<3.0.0",
  "torchvision>=0.16.0,<1.0.0",
  "torchaudio>=2.1.0,<3.0.0",
  "lightning>=2.1.0,<3.0.0",
  # Modern time series libraries - NEW
  "neuralprophet>=0.7.0,<1.0.0",
  "statsmodels>=0.14.0,<1.0.0",
  # HTTP and networking
  "requests>=2.31.0,<3.0.0",
  "psutil>=6.0.0,<7.0.0",
  # Security
  "cryptography>=42.0.0,<46.0.0",
  "tqdm>=4.66.0,<5.0.0",
  # Modern Python utilities
  "pydantic>=2.5.0,<3.0.0",
  "pydantic-settings>=2.1.0,<3.0.0",
]

[tool.setuptools.packages.find]
include = [
  "analysis*",
  "config*",
  "core*",
  "data*",
  "models*",
  "scripts*",
  "strategies*",
  "tests*",
  "trading*",
  "ui*",
  "utils*",
]
exclude = [
  "venv*",
  "cache*",
  "audit*",
  "data_storage*",
  "models_saved*",
  "backups*",
  "logs*",
]

[project.optional-dependencies]
ml = [
  "torch>=2.1.0,<3.0.0",
  "torchvision>=0.16.0,<1.0.0",
  "lightning>=2.1.0,<3.0.0",
]
# NEW: Distributed training support
distributed = [
  "ray>=2.8.0,<3.0.0",
  "deepspeed>=0.12.0,<1.0.0",
  "accelerate>=0.25.0,<1.0.0",
]
# NEW: Modern backtesting
backtest = [
  "vectorbt>=0.26.0,<1.0.0",
  "backtesting>=0.3.3,<1.0.0",
]
# NEW: Web dashboard
web = [
  "fastapi>=0.105.0,<1.0.0",
  "uvicorn>=0.25.0,<1.0.0",
  "websockets>=12.0,<13.0",
  "plotly>=5.18.0,<6.0.0",
  "dash>=2.14.0,<3.0.0",
]
china = [
  "akshare>=1.11.0",
]
vpn = [
  "yfinance>=0.2.40",
]
nlp = [
  "beautifulsoup4>=4.12.0,<5.0.0",
  # NEW: Modern NLP for sentiment
  "sentence-transformers>=2.2.0,<3.0.0",
  "transformers>=4.36.0,<5.0.0",
]
gui = [
  "PyQt6>=6.6.0,<7.0.0",
  "pyqtgraph>=0.13.0,<1.0.0",
  # NEW: Modern charting
  "plotly>=5.18.0,<6.0.0",
  "bokeh>=3.3.0,<4.0.0",
]
security = []
live = [
  "easytrader>=0.23.0",
]
explainability = [
  "shap>=0.44.0",
  "lime>=0.2.0",
  # NEW: Modern interpretability
  "captum>=0.6.0,<1.0.0",
  "interpret>=0.3.0,<1.0.0",
]
backup = [
  "boto3>=1.34.0",
  "azure-storage-blob>=3.19.0",
  "google-cloud-storage>=2.13.0",
]
two_factor_auth = [
  "qrcode[pil]>=7.4.0",
  "pyotp>=2.9.0",
]
# NEW: Performance profiling
profiling = [
  "py-spy>=0.3.14",
  "memray>=1.11.0",
  "perfetto>=0.1.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.1.0",
  "mypy>=1.8.0",
  "types-requests>=2.32.0.20240712",
  "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=analysis --cov=config --cov=core --cov=data --cov=models --cov=trading --cov=ui --cov=utils --cov-report=term-missing --cov-fail-under=40"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "venv",
  "cache",
  "audit",
  "data_storage",
  "models_saved",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["analysis", "config", "core", "data", "models", "trading", "ui", "utils"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_optional = true
warn_no_return = true
warn_unreachable = true
allow_redefinition = true
show_error_codes = true
pretty = true
# Enable modern Python features
enable_incomplete_feature = ["Unpack", "TypeVarTuple"]
# Stricter checks for modern code
strict = true
exclude = "(^|.*[\\\\/])(venv|cache|audit|data_storage|models_saved|scripts)([\\\\/]|$)"

[[tool.mypy.overrides]]
module = [
  "PyQt6.*",
  "pyqtgraph.*",
  "akshare.*",
  "yfinance.*",
  "easytrader.*",
  "ta.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["analysis", "config", "core", "data", "models", "trading", "ui", "utils"]
omit = [
  "tests/*",
  "venv/*",
  "cache/*",
  "audit/*",
  "data_storage/*",
  "models_saved/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "raise NotImplementedError",
]
